fix: fix layout issue for #101 && fixed #71

--- a/src/app/presentation/case-study/case-study.component.scss
+++ b/src/app/presentation/case-study/case-study.component.scss
@@ -3,7 +3,7 @@
 
 .case-study {
   min-height: 600px;
-  height: calc(100% - 64px);
+  height: 100%;
 
   .active {
     background-color: #ff4081;
