--- a/src/app/presentation/design/path/path.component.scss
+++ b/src/app/presentation/design/path/path.component.scss
@@ -16,7 +16,7 @@
   }
 }
 
-.container {
+.home-container {
   padding: 0;
   margin-right: 6px;
   margin-top: 12px;
@@ -37,7 +37,7 @@
   }
 }
 
-.container:nth-child(odd) {
+.home-container:nth-child(odd) {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -45,7 +45,7 @@
  * note that styling gu-mirror directly is a bad practice because it's too generic.
  * you're better off giving the draggable elements a unique class and styling that directly!
  */
-.container > div,
+.home-container > div,
 .gu-mirror {
   margin: 10px;
   padding: 5px;
@@ -53,11 +53,11 @@
   transition: opacity 0.4s ease-in-out;
 }
 
-.container > div.empty {
+.home-container > div.empty {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
-.container > div {
+.home-container > div {
   display: inline-block;
   overflow-y: auto;
   cursor: move;
