--- a/src/app/presentation/home/home.component.scss
+++ b/src/app/presentation/home/home.component.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/color';
 
-.container {
+.home-container {
   position: relative;
   z-index: 100;
   top: 64px;
