--- a/src/app/presentation/solution/solution.component.scss
+++ b/src/app/presentation/solution/solution.component.scss
@@ -3,7 +3,7 @@
 
 .solution {
   min-height: 600px;
-  height: calc(100% - 64px);
+  height: 100%;
 
   .active {
     background-color: #ff4081;
