--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -221,7 +221,7 @@
     margin-left: .5rem
   }
 
-  .container {
+  .home-container {
     margin: 0 auto;
     max-width: 112.0rem;
     padding: 0 2.0rem;
